# auth-service

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
app/api/v1/: routes.py
app/api/v1/endpoints/: auth.py  user.py
app/core/: config.py  container.py  database.py  dependencies.py  interception.py  security.py
app/model/: __init__.py  base_model.py  refresh_token.py  user.py
app/repository/: __init__.py  base_repository.py  refresh_token_repository.py  user_repository.py
app/schema/: auth_schema.py  base_schema.py  user_schema.py
app/services/: auth_service.py  base_service.py
migrations/: env.py
migrations/versions/: 0d7ca50837d5_initdb.py
tests/unit_tests/: test_container.py
